<resources>
    <string name="app_name">quiz_app</string>
    <string name="imageMain">"image for the main activity "</string>
    <string name="Start">Start\n</string>
    <string name="WELCOME">welcome\n</string>
    <string name="Exit">Exit\n</string>
    <string name="Email">email</string>
    <string name="Password">Password\n</string>
    <string name="Login">login</string>
    <string name="signup">signup\n</string>
    <string name="login">login</string>
    <string name="Register">register</string>
    <string name="imageRegister">"image for register activity "</string>
    <string name="choose_your_handle">Choose your handle</string>
    <string name="confirm">confirm</string>
    <string name="connectedUser">you are connected with the email address : example@gmail.com</string>
    <string name="logout">logout</string>
    <string name="AccueilImage">image for the accueil activity</string>
    <string name="cinema">cinema\n</string>
    <string name="cinemaImage">image for the cinema category</string>
    <string name="knowledge">knowledge</string>
    <string name="knowledgeImage">image for knowledge category</string>
    <string name="sport">sport</string>
    <string name="imageSport">image for sport category</string>
    <string name="music">music</string>
    <string name="musicImage">"image for music category "</string>
    <string name="choose_category">"Choose category "</string>
    <string name="question_01">Question 01</string>
    <string name="count">count</string>
    <string name="next">Next</string>
    <string name="choose_1">Choose 1</string>
    <string name="choose_2">Choose 2</string>
    <string name="choose_3">Choose 3</string>
    <string name="choose_4">Choose 4</string>
    <string name="back">back</string>
    <string name="question_02" translatable="false">question 02\n</string>
    <string name="select_answer">Select the correct answer</string>
    <string name="check_answer">check the correct answer</string>
    <string name="answer_1">answer 1</string>
    <string name="answer_2">answer 2</string>
    <string name="answer_3">answer 3</string>
    <string name="answer_4">answer 4</string>
    <string name="question_03" translatable="false">question 03</string>
    <string name="true_false">"is it true or false ? "</string>
    <string name="togglebutton" translatable="false">ToggleButton</string>
    <string name="notCorrect"> not correct </string>
    <string name="correct">correct\n</string>
    <string name="question_04" translatable="false">question 04\n</string>
    <string name="response">"enter the correct answer "</string>
    <string name="response_t4">response</string>
    <string name="save_cate" translatable="false">Save C</string>
    <string name="code" translatable="false">Code</string>
    <string name="name" translatable="false">Name</string>
    <string name="_123" translatable="false">123</string>
    <string name="code_cate" translatable="false">Code</string>
    <string name="name_cate" translatable="false">Name</string>
    <string name="theme_light">light mode\n</string>
    <string name="theme_dark">dark mode\n</string>
    <string name="add_question">add question</string>
    <string name="add_category">add category</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_category">Save category</string>
    <string name="save_question">Save question</string>
    <string name="textfill">Text fill</string>
    <string name="enter_username">enter user name</string>
    <string name="save">save changes\n</string>
    <string name="english">english</string>
    <string name="french">french</string>
    <string name="connected_with_email">"you are connected with the email address %1$s and holder %2$s "</string>
    <string name="modify_username">you can modify your username</string>
    <string name="startImage">description for start image</string>
    <string name="logo_player">logo</string>
    <string name="player_name">Player Name</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="history" translatable="false">History</string>
    <string name="report">Report :</string>
    <string name="chosen_category">chosen category :</string>
    <string name="categoryname">category name</string>
    <string name="number_of_correct_answers">number of correct answers :</string>
    <string name="nbcorrectquestion">nbCorrectQuestion</string>
    <string name="remark">remark</string>
    <string name="nbquestions">nb questions</string>
    <string name="username">username :</string>
    <string name="total_number_of_questions">total number of questions :</string>
    <string name="feedback">feedback :</string>
    <string name="save_report">Save Report</string>
    <string name="usernameA">username</string>

</resources>