<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEE2">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#9F7E69"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoPlayer"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_player"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/namePlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/player_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="@+id/headerLayout"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <TextView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D2BBA0"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/home"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D2BBA0"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D2BBA0"
            android:text="@string/share"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#D2BBA0"
            android:text="@string/history"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
