<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEE2"
    tools:context=".QuestionT1Activity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_top"
        app:flow_horizontalBias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/questionChoose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/question_01"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/count1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/count"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D2BBA0"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="12dp"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChoose4" />

    <Button
        android:id="@+id/buttonChoose1"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#9F7E69"
        android:fontFamily="sans-serif-smallcaps"
        android:hapticFeedbackEnabled="false"
        android:text="@string/choose_1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/buttonChoose2"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#9F7E69"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choose_2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChoose1" />

    <Button
        android:id="@+id/buttonChoose3"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#9F7E69"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choose_3"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChoose2" />

    <Button
        android:id="@+id/buttonChoose4"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#9F7E69"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/choose_4"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChoose3" />

</androidx.constraintlayout.widget.ConstraintLayout>