<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEEE2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageMain"
        android:layout_width="416dp"
        android:layout_height="354dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imageMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/answer"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#D2BBA0"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="8dp"
        android:text="@string/Start"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccueil" />

    <TextView
        android:id="@+id/textViewAccueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/WELCOME"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMain" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="355dp"
        android:layout_height="63dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#D2BBA0"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="8dp"
        android:text="@string/Exit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>